[package]
name = "authentication_microsservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = "1.0.205"
tokio = { version = "1.39.2", features = ["full", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.18"
utoipa = { version = " 4.2.3", features = ["axum_extras"] }
utoipa-scalar = { version = "0.1.0", features = ["axum"] }
